# make-cpp-library-advance

./: README.md
ch1/: CMakeLists.txt  README.md
ch1/libs/mylib/: CMakeLists.txt  Config.cmake.in
ch1/libs/mylib/src/: CIRCLE.cpp  mylib.cpp
ch1/src/: CMakeLists.txt  main.cpp
ch2/: CMakeLists.txt  README.md
ch2/package/macx86_64/mylib/cmake/: mylib.cmake
ch2/package/macx86_64/mylib/include/: CIRCLE.h  mylib.h
ch2/package/mingw64/mylib/cmake/: mylib-debug.cmake  mylibConfig.cmake
ch2/src/: CMakeLists.txt  main.cpp
